# SNGE

./: .gitignore  README.md  pyproject.toml
src/snge/: __init__.py  __main__.py  analysis.py  deterministic.py  dimensionless.py  ensemble.py  fitting.py  langevin.py  langevin_fast.py  models.py  plotting.py  stochastic.py  stochastic_fast.py
tests/: __init__.py  conftest.py  test_analysis.py  test_deterministic.py  test_ensemble.py  test_fast_implementations.py  test_fitting.py  test_gillespie_predictions.py  test_integration.py  test_langevin.py  test_models.py  test_plotting.py  test_snge.py  test_stochastic.py
